added changes to work the code base into a more OO structure

--- a/openGL.vcxproj
+++ b/openGL.vcxproj
@@ -123,17 +123,20 @@
     <ClCompile Include="Core\Init\InitGlew.cpp" />
     <ClCompile Include="Core\Init\InitGlut.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Managers\SceneManager.cpp" />
     <ClCompile Include="Managers\ShaderManager.cpp" />
     <ClCompile Include="Models\GameModel.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Core\Init\ContextInfo.h" />
     <ClInclude Include="Core\Init\FrameBufferInfo.h" />
+    <ClInclude Include="Core\Init\IListener.h" />
     <ClInclude Include="Core\Init\InitGlew.h" />
     <ClInclude Include="Core\Init\InitGlut.h" />
     <ClInclude Include="Core\Init\WindowInfo.h" />
     <ClInclude Include="Core\VertexFormat.h" />
     <ClInclude Include="GameModels.h" />
+    <ClInclude Include="Managers\SceneManager.h" />
     <ClInclude Include="Managers\ShaderManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
